# reconforge

./: .abacus.donotdelete  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  reconforge.py  requirements-dev.txt  requirements.txt
.github/workflows/: quality-gates.yml
config/: mcp.yaml  profiles.yaml  tools.yaml
config/environments/: dev.yaml  prod.yaml  stage.yaml
config/providers/: burp_mcp.example.yaml
core/: __init__.py  ai_orchestration.py  attack_workflow.py  authorization_gate.py  config_loader.py  credential_vault.py  cve_enricher.py  data_contracts.py  detection_map.py  engagement.py  exceptions.py  external_integrations.py  findings_manager.py  logger.py  loot_manager.py  notes_manager.py  opsec_checks.py  output_manager.py  post_exploitation.py  profile_loader.py  risk_policy.py  runner.py  secrets_manager.py  target_parser.py  telemetry.py  tool_config.py  utils.py  validators.py  version.py  workflow_orchestrator.py
core/adapters/: __init__.py  base_adapter.py  contracts.py  mcp_adapter.py
core/orchestrator/: __init__.py  execution_coordinator.py  module_router.py  workflow_engine.py
core/policy/: __init__.py  scope_policy.py  target_scope.py
core/reporting/: __init__.py  models.py  pipeline.py
core/schemas/: __init__.py  contracts.py
docs/: AI_ORCHESTRATION_ARCHITECTURE.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  ARTIFACT_POLICY.md  BURP_MCP_INTEGRATION.md  CLAUDE_MCP_IMPLEMENTATION_PLAN.md  CLAUDE_MCP_INTEGRATION.md  COMMAND_REFACTORING_REPORT.md  CONFIGURATION.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_MAP.md  EXTENDING.md  FAQ.md  FINAL_STABILIZATION_REPORT.md  FINDINGS.md  HTB_JERRY_CAPABILITY_ASSESSMENT.md  INDEPENDENT_SECURITY_ASSESSMENT_2026-04-13.md  INTEGRATION_TESTING.md  LIMITATIONS.md  MIGRATION_CONFIG_SCHEMA.md  MODULES.md  OBSERVABILITY_AND_CONTRACTS.md  PHASE_6_QUALITY_REPORT.md  PRIORITY_4_COMPLETION_REPORT.md  PROJECT_SCORECARD.md  RECONFORGE_MODULE_REPORT.md  REPORTING_ARCHITECTURE.md  RUNBOOKS.md  SETUP.md  SEVERITY_CRITERIA.md  SUPPORT_MATRIX.md  TERMINOLOGY.md  THREAT_MODEL.md  USAGE.md  VERSIONING.md  WEB_MODULE_SUMMARY.md  WORKFLOW_GUIDE.md  attack_path_generation.md  (+4 more)
docs/archive/: AD_MODULE_SUMMARY.md  COMMAND_REFACTORING_REPORT.md  FINAL_STABILIZATION_REPORT.md  HTB_KNIFE_CAPABILITY_ASSESSMENT.md  INDEPENDENT_SECURITY_ASSESSMENT_2026-04-13.md  MIGRATION_CONFIG_SCHEMA.md  PHASE_6_QUALITY_REPORT.md  PRIORITY_4_COMPLETION_REPORT.md  PROJECT_SCORECARD.md  RECONFORGE_MODULE_REPORT.md  WEB_MODULE_SUMMARY.md
examples/: http_collection.py  validate_burp_provider.py
examples/claude_mcp/: dry_run_against_lab.py  plan_workflow.py  query_status.py
lab/: vulnerable_app.py
mcp_validation/: README.md  __init__.py  report.json  run_validation.py
mcp_validation/burp/: __init__.py  client.py  connection.py  models.py  rpc.py  validator.py
modules/: __init__.py
modules/ad/: ARCHITECTURE.md  README.md  __init__.py  ad_module.py  base.py
modules/api/: HARDENING_CHANGELOG.md  README.md  api_module.py  base.py
modules/network/: README.md  __init__.py  base.py  network_module.py
modules/surface/: SURFACE_INTELLIGENCE.md  base.py  surface_module.py
modules/web/: README.md  __init__.py  base.py  web_module.py
reconforge/: __init__.py  __main__.py  cli.py
reconforge/attack_paths/: __init__.py  engine.py
reconforge/burp/: __init__.py  attack_paths.py  intelligence.py  validate.py  web_validate.py
reconforge/collectors/: __init__.py  http_collector.py
reconforge/entrypoints/: __init__.py  attack_paths.py  burp_intelligence.py  burp_validation.py  burp_web_validation.py
reconforge/intelligence/: __init__.py  engine.py
reconforge/mcp/: __init__.py  approvals.py  approvals_cli.py  audit.py  errors.py  jobs.py  policy.py  resources.py  sanitization.py  schemas.py  server.py  services.py  tools.py
reconforge/normalizers/: __init__.py  http.py
scripts/: check_doc_counters.py  check_doc_links.py
tests/: conftest.py  test_authorization_fuzzing_p5.py  test_authorization_required_p5.py  test_cli_invalid_target.py  test_cli_surface_encrypt_loot.py  test_doc_counters.py  test_doc_links.py  test_jwt_analysis_p5.py  test_mcp_cli_wiring.py  test_openapi_parser_p5.py  test_profile_activation_p8.py  test_scope_gate_cli_p10.py  test_surface_correlation_phase9.py  test_surface_intelligence.py  test_tool_config_p9.py
tests/attack_paths/: test_attack_path_engine.py
tests/core/: test_ai_orchestration.py  test_attack_workflow.py  test_authorization_gate.py  test_config_loader.py  test_credential_vault.py  test_cve_enricher.py  test_data_contracts.py  test_engagement.py  test_external_integrations.py  test_findings_manager.py  test_logger.py  test_loot_manager.py  test_notes_manager.py  test_opsec_checks.py  test_output_manager.py  test_post_exploitation.py  test_profile_loader.py  test_risk_policy.py  test_runner.py  test_runner_scope_wiring.py  test_secrets_manager.py  test_target_parser.py  test_target_scope_policy.py  test_validators.py  test_version.py  test_workflow_orchestrator.py
tests/core_foundation/: test_adapter_foundation.py  test_execution_coordinator_foundation.py  test_scope_policy_foundation.py
tests/entrypoints/: test_burp_validation_entrypoint.py  test_burp_web_validation.py
tests/http_pipeline/: test_http_collector.py  test_http_normalizer.py
tests/intelligence/: test_vulnerability_engine.py  test_vulnerability_engine_confidence.py  test_vulnerability_engine_scope.py
tests/lab/: test_vulnerable_app.py
tests/mcp/: conftest.py  test_approvals.py  test_approvals_cli.py  test_audit_events.py  test_execute_approved_phase.py  test_execution_jobs.py  test_findings_and_reports.py  test_findings_reporting_tools_protocol.py  test_lab_integration.py  test_no_credential_exposure.py  test_out_of_band_approval_security.py  test_policy.py  test_prompt_injection_adversarial.py  test_read_only_tools.py  test_resources.py  test_sanitization.py  test_server_foundation.py  test_services.py  test_structured_errors.py  (+1 more)
(+210 files in other folders)
