[build-system]
# setuptools floor: PYSEC-2026-3447 affects <83.0.0 (found by CI's
# pip-audit step on 2026-07-14 pulling in an unconstrained build
# dependency — see CHANGELOG.md).
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reconforge"
version = "2.11.4"
description = "An evidence-driven reconnaissance and attack-path analysis framework for authorized penetration testing and Red Team laboratories."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Andrews Ferreira" }
]
dependencies = [
  "pyyaml>=6.0.3",
  "cryptography>=41.0",
  "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "pytest-cov>=5.0",
  "ruff>=0.13.0",
  "mypy>=1.11.0",
  "bandit>=1.8.0",
  "pip-audit>=2.8.0",
  "types-PyYAML>=6.0.12",
]
# Convenience installs for each module's pip-installable optional tools
# (per docs/SUPPORT_MATRIX.md). Every tool below is still invoked as an
# external subprocess, never imported — these extras only save the
# operator a manual `pip install` step; they do not change what's
# "required" per docs/SUPPORT_MATRIX.md ("No other Python packages are
# required. The framework is intentionally dependency-light."). Unpinned:
# these are third-party recon tools outside this project's own release
# cycle, and a fabricated version floor would be worse than none.
ad = [
  "enum4linux-ng",
  "impacket",
  "bloodhound",
  "netexec",
]
web = [
  "wafw00f",
]
api = [
  "arjun",
]
# Claude MCP server integration (docs/CLAUDE_MCP_IMPLEMENTATION_PLAN.md).
# First-party server code, not a wrapped external recon tool — unlike the
# extras above, this one only enables `reconforge mcp serve`.
mcp = [
  "mcp>=1.2.0",
]

[project.scripts]
reconforge = "reconforge:main"

[tool.setuptools]

[tool.setuptools.packages.find]


[tool.setuptools.package-data]
"*" = ["*.yaml", "*.md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = false
exclude = [
  "^outputs/",
]

[tool.bandit]
exclude_dirs = ["tests", "outputs"]
# NOTE: bandit's TOML config only supports exclude_dirs/skips/tests — it has
# no severity/confidence keys. The previous `severity = "medium"` /
# `confidence = "medium"` lines here were silently ignored by bandit (verify
# with `bandit --help`), giving a false impression of a filtered scan.
#
# B105/B106/B107 ("possible hardcoded password") are skipped repo-wide:
# audited every occurrence (2026-07-11) and all are one of two systemic
# false-positive patterns, not real secrets —
#   1. optional credential parameters defaulting to "" (e.g.
#      `password: str = ""`), the correct/safe way to express "no
#      credential supplied yet" in this codebase;
#   2. regex pattern strings for parsing tool output that happen to
#      contain the word "password" (e.g. enum4linux-ng policy parsing).
# CVE/dependency and credential-*handling* logic itself is still fully
# covered by the other bandit checks and by pip-audit.
skips = ["B105", "B106", "B107"]

[tool.coverage.run]
source = ["core", "modules", "reconforge"]
omit = ["*/tests/*", "outputs/*"]

[tool.coverage.report]
# Honest floor, not an aspiration: actual measured coverage as of
# 2026-07-14 is ~69% (core/modules/reconforge combined — reconforge
# added to `source` above alongside CI's --cov=reconforge, v2.11.1).
# The CI workflow previously asserted --cov-fail-under=85 without this
# ever having been true (nothing in pyproject.toml codified it either,
# so a local `pytest --cov` run enforced nothing at all). Raising real
# coverage back toward 85% is tracked as a P1 follow-up in
# docs/ARCHITECTURE_REVIEW.md rather than silently claimed here.
fail_under = 50
