[build-system]
# setuptools floor: PYSEC-2026-3447 affects <83.0.0 (found by CI's
# pip-audit step on 2026-07-14 pulling in an unconstrained build
# dependency — see CHANGELOG.md).
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reconforge"
version = "2.15.2"
description = "An evidence-driven reconnaissance and attack-path analysis framework for authorized penetration testing and Red Team laboratories."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Andrews Ferreira" }
]
dependencies = [
  "pyyaml>=6.0",
  "cryptography>=41.0",
  "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "pytest-cov>=5.0",
  "ruff>=0.13.0",
  "mypy>=1.11.0",
  "bandit>=1.8.0",
  "pip-audit>=2.8.0",
  "types-PyYAML>=6.0.12",
]
# Convenience installs for each module's pip-installable optional tools
# (per docs/SUPPORT_MATRIX.md). Every tool below is still invoked as an
# external subprocess, never imported — these extras only save the
# operator a manual `pip install` step; they do not change what's
# "required" per docs/SUPPORT_MATRIX.md ("No other Python packages are
# required. The framework is intentionally dependency-light."). Unpinned:
# these are third-party recon tools outside this project's own release
# cycle, and a fabricated version floor would be worse than none.
ad = [
  "enum4linux-ng",
  "impacket",
  "bloodhound",
  "netexec",
]
web = [
  "wafw00f",
]
api = [
  "arjun",
]
# Claude MCP server integration (docs/CLAUDE_MCP_IMPLEMENTATION_PLAN.md).
# First-party server code, not a wrapped external recon tool — unlike the
# extras above, this one only enables `reconforge mcp serve`.
mcp = [
  "mcp>=1.2.0",
]

[project.scripts]
reconforge = "reconforge:main"

[tool.setuptools]

[tool.setuptools.packages.find]


[tool.setuptools.package-data]
"*" = ["*.yaml", "*.md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E9 (syntax errors) is kept explicit rather than folded into a broader "E"
# selection: E501 (line-too-long) alone is ~500 hits across this 32k-line
# codebase, pure reformatting with no correctness value — deliberately
# deferred rather than accepted as unavoidable scope creep on this pass.
# F/B/UP/I/SIM/C4 (pyflakes, bugbear, pyupgrade, isort, flake8-simplify,
# flake8-comprehensions) were widened from the prior syntax-error-only
# scope (2026-07-15) after auditing and fixing every real violation they
# surfaced — see CHANGELOG.md for the fix list, including two genuine bugs
# (network/phases/port_scanning.py's dead has_kerberos read, and
# network/phases/service_enumeration.py's cruder-than-necessary share
# severity heuristic) found via F841 unused-variable, not by inspection.
select = ["E9", "F", "B", "UP", "I", "SIM", "C4"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = false
exclude = [
  "^outputs/",
]

[tool.bandit]
exclude_dirs = ["tests", "outputs"]
# NOTE: bandit's TOML config only supports exclude_dirs/skips/tests — it has
# no severity/confidence keys. The previous `severity = "medium"` /
# `confidence = "medium"` lines here were silently ignored by bandit (verify
# with `bandit --help`), giving a false impression of a filtered scan.
#
# B105/B106/B107 ("possible hardcoded password") are skipped repo-wide:
# audited every occurrence (2026-07-11) and all are one of two systemic
# false-positive patterns, not real secrets —
#   1. optional credential parameters defaulting to "" (e.g.
#      `password: str = ""`), the correct/safe way to express "no
#      credential supplied yet" in this codebase;
#   2. regex pattern strings for parsing tool output that happen to
#      contain the word "password" (e.g. enum4linux-ng policy parsing).
# CVE/dependency and credential-*handling* logic itself is still fully
# covered by the other bandit checks and by pip-audit.
skips = ["B105", "B106", "B107"]

[tool.coverage.run]
source = ["core", "modules", "reconforge"]
omit = ["*/tests/*", "outputs/*"]

[tool.coverage.report]
# Honest floor, not an aspiration: actual measured coverage as of
# 2026-07-15 is ~70.5% (core/modules/reconforge combined). Raised from
# the previous fail_under=50 — which was never close to the real number
# and enforced nothing meaningful — to a value the suite genuinely clears
# today, so a real regression below current levels now fails CI instead
# of silently passing under a 20-point-stale gate.
#
# The Priority-1 spec target (≥78% globally, 85-90% for security-critical
# modules) is NOT met by this floor and is not claimed here. Reaching it
# needs real new tests across dozens of currently-low-coverage files —
# a separate, larger effort, not a config-file change. Lowest-coverage
# files as of 2026-07-15 (>=20 statements, most-to-least urgent):
#   core/adapters/burp/burp_mcp_sse_client.py   0%  (198 stmts)
#   core/utils.py                                0%  ( 37 stmts)
#   modules/ad/analyzers/privilege_analyzer.py   9%  ( 65 stmts)
#   modules/ad/reporting/high_value_targets_reporter.py 11% ( 57 stmts)
#   modules/ad/reporting/attack_surface_reporter.py     14% ( 51 stmts)
#   modules/ad/analyzers/misconfiguration_analyzer.py   15% ( 60 stmts)
#   modules/ad/reporting/remediation_reporter.py        15% ( 41 stmts)
#   modules/ad/analyzers/relationship_analyzer.py       17% ( 60 stmts)
#   modules/surface/phases/prioritization.py            17% (132 stmts)
#   modules/ad/reporting/attack_path_reporter.py        18% ( 40 stmts)
# (reconforge/burp/* and reconforge/entrypoints/{attack_paths,burp_intelligence}.py
# also show 0%, but are thin CLI-entrypoint wrappers around already-tested
# core logic, not independently test-worthy in the same way.)
fail_under = 70
